fix mail_sender + added data in log + fix message in mail

--- a/app/views/account/_tramenu_login.html.erb
+++ b/app/views/account/_tramenu_login.html.erb
@@ -19,7 +19,7 @@
         <% else %>
             <div class="fs-login" id="fs-login-txt">
 
-                  <%= link_to "Profilo Utente", url_for( :controller => 'mio_profilo', :action => 'account' , :id => @uid), :class => 'fs-vuoto-inline3-button', :style=> 'line-height:28px; font-size:1em; '   %>
+                  <%= link_to "Profilo Utente", url_for( :controller => 'mio_profilo', :action => 'page' , :id => @uid), :class => 'fs-vuoto-inline3-button', :style=> 'line-height:28px; font-size:1em; '   %>
             </div>
         <% end %>
         <div class="fs-login">
