--- a/app/views/account/lost_password.html.erb
+++ b/app/views/account/lost_password.html.erb
@@ -9,7 +9,7 @@
   <div class="fs-content-layout-row">
     <div class="fs-layout-cell post-layout-item-2" style="width: 98%">
       <article class="fs-post fs-article clearfix" style="min-height: 400px">
-        <div id="fs-helpme-header">Problemi di accesso all'account</div>
+        <div id="fs-helpme-header">Problemi di accesso all'account <br /> e cambio password </div>
         <br>
 
         <p>Se non riesci ad accedere, seleziona il tuo problema tra quelli indicati di seguito
@@ -17,6 +17,7 @@
         <p/>
 
         <p><br></p>
+        <div class="fs-helpme-content">
 
         <div id="accordion-basic">
 
@@ -36,7 +37,7 @@
 
           <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Non ricordo la mia mail e non riesco ad accedere</h6>
 
-          <div class="fs-helpme-content">
+
             <br/>
 
             <p> Per il campo Login di accesso al sito puoi utilizzare indifferentemente una username o l'indirizzio
@@ -76,21 +77,7 @@
             </p>
             <br/>
           </div>
-          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Vorrei cambiare la mia password </h6>
 
-          <div class="fs-helpme-content">
-            <br>
-            <p>
-              Inserisci la tua mail nel campo sotto e premi invio. A breve riceverai una mail con indicata la procedura
-              per il cambio password.
-            </p>
-            <br/>
-            <% form_tag({:action => "lost_password"}, {:class => "fs-lost_password"}) do %>
-                <span> <%= text_field_tag 'mail', nil, :placeholder => 'Email' %></span>
-                <span class="fs-lost_password-btn"> <%= submit_tag l(:button_submit), :class => "fs-giallo-button" %> </span>
-            <% end %>
-            <br />
-          </div>
         </div>
         <div class="cleared"></div>
       </article>
