--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,5 +1,5 @@
 <div class="contextual">
-  <%= link_to l(:label_invoice_new), new_invoice_path, :class => 'icon icon-add' %>
+  <%= link_to l(:label_invoice_new), invoice_receiver_path, :class => 'icon icon-add' %>
 </div>
 
 <% if @invoices.any? %>
