--- a/app/views/users/_fatture.html.erb
+++ b/app/views/users/_fatture.html.erb
@@ -2,10 +2,9 @@
 <div class="splitcontentleft">
   <fieldset class="box tabular">
     <legend><%= l(:user_invoices, :num => @user.invoices.count.to_s) %></legend>
-    <div class="contextual">
-      <%= link_to l(:label_invoice_new), new_invoice_path, :class => 'icon icon-add' if User.current.admin? %>
-    </div><h3>&nbsp;</h3>
-
+    <div class="contextual" style="margin-bottom: 20px;">
+      <%= link_to l(:label_invoice_new), new_invoice_path({:user_id => @user.id }), :class => 'icon icon-add' if User.current.admin? %>
+    </div>
     <% if !@user.invoices.nil? && @user.invoices.count > 0 %>
         <div class="autoscroll">
           <table class="list invoices">
@@ -34,7 +33,7 @@
                   <td align="left">
                     <%= link_to('PDF', invoice_path(invoice, :format => :pdf), :class => 'icon icon-pdf') %>
                   </td>
-                  <%# h smart_truncate(invoice.msg, 100) %></td>
+                  <%# h smart_truncate(invoice.msg, 100) </td %>
                   <td class="buttons"><%= link_to('', edit_invoice_path(invoice), :class => 'icon icon-edit') if User.current.admin? %>
                     <%= link_to('', invoice_path(invoice), :class => 'icon icon-show') if !User.current.admin? %>
                   </td>
