--- a/app/views/invoices/invia_fatture.html.erb
+++ b/app/views/invoices/invia_fatture.html.erb
@@ -1,4 +1,5 @@
 <h2><%=l(:invia_fatture)%></h2>
+<h1 style="color: #b22222;">pagina in via di definizione</h1>
   In questa pagina:
   <ul>
     <li>ricerca utente o organismo associato</li>
