--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,141 +1,131 @@
-<div class="contextual">
-  <%= link_to(l(:button_edit), edit_invoice_path(@invoice), :class => 'icon icon-edit') if User.current.admin? %>
-  <%= link_to(l(:button_delete),
-              invoice_path(@invoice),
-              :confirm => l(:text_are_you_sure),
-              :method => :delete,
-              :class => 'icon icon-del') if User.current.admin? %>
-</div>
-<h2><%= link_to l(:label_invoice_plural), invoices_path %> &#187; <%= h @invoice %></h2>
-<div id="footer-menu" class="box">
-  <%= render_menu :menu_payment_fs %>
-</div>
+<style type="text/css">
+    .ipage {
+        width: 595px;
+        border: solid 2px #daddf7;
+    }
 
-<div class="splitcontentleft">
-  <fieldset class="box tabular">
-    <legend><%= l(:label_invoice) %></legend>
-    <p>
-      <% unless @invoice.numero_fattura.blank? %>
-          <em><%= h @invoice.numero_fattura %></em>
-          <br/>
-      <% end %>
-    </p>
-     <%	 unless @invoice.user.nil?  %>
-    <p>
-      <%= l(:label_user) %>: <%= link_to h(@invoice.user), user_path(@invoice.user, :id => @invoice.user_id) %>
-    </p>
-    <%	end  %>
-    <%	 unless @invoice.convention.nil?  %>
-        <p>
-          <%= l(:label_convention) %>: <%= link_to h(@invoice.convention), convention_path(@invoice.convention, :id => @invoice.convention_id) %>
-        </p>
-    <%	end  %>
-    <p>
-      <%= l(:label_data_fattura) %>: <%= format_date(@invoice.data_fattura) %>
-    </p>
+    .icentre {
+        width: 50%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-    <p>
-      <%= l(:label_mittente) %>:
+    .ipad {
+        padding: 0 3%;
 
-    <div class="wiki">
-      <%= @invoice.mittente %>
-    </div>
-    </p>
-    <p>
-      <%= l(:label_destinatario) %>:
+    }
 
-    <div class="wiki">
-      <%= @invoice.destinatario %>
-    </div>
-    </p>
-    <p>
-      <%= l(:label_sezione) %>: <%= h @invoice.sezione %>
-    </p>
+    .ipadtab {
+        padding: 0 2% 0 12%;
 
-    <p>
-      <%= l(:label_anno) %>: <%= h @invoice.anno %>
-    </p>
+    }
 
-    <p>
-      <%= l(:label_tariffa) %>: <%= h @invoice.tariffa %>
-    </p>
+    table {
+        border: 2px;
+    }
 
-    <p>
-      <%= l(:label_sconto) %>: <%= h(@invoice.sconto) %>
-    </p>
+</style>
 
-    <p>
-      <%= l(:label_iva) %>: <%= h @invoice.iva %>
-    </p>
-
-    <p>
-      <%= l(:label_pagamento) %>: <%= h @invoice.pagamento %>
-    </p>
-  </fieldset>
-</div>
-
-<div class="splitcontentright">
-<% unless @invoice.user.nil?  %>
-  <fieldset class="box tabular">
-    <legend><%= l(:label_user_invoices) %></legend>
+<div class="ipage">
+  <%=  @invoice.mittente %>
+  <div class="ipad">
     <table>
       <tr>
-        <th>num</th>
-        <th>data</th>
-        <th>anno</th>
-        <th>tariffa</th>
-        <th>pagamento</th>
+        <td style="width: 75%">
+          <%= @invoice.destinatario %>
+
+        </td>
+        <td style="width: 25%"> fattura n. <%= @invoice.numero_fattura.to_s + ' / ' + @invoice.sezione.to_s %> <br/>
+          del  <%= I18n.localize(@invoice.data_fattura.to_date, :format => :giorno_mese_anno_barra) %></td>
       </tr>
-      <% @invoice.user.invoices.each do |user_invoice| %>
-          <tr>
-            <% if (user_invoice != @invoice) %>
-                <td class="buttons">
-                  <%= link_to(h(user_invoice.numero_fattura), invoice_path(user_invoice, :id => user_invoice.id), :class => 'icon icon-summary') if User.current.admin? %>
-            <% else %>
-                <td><b><%= h user_invoice.numero_fattura %></b></td>
-            <% end %>
-            </td>
-            <td><%= format_date(user_invoice.data_fattura) %></td>
-            <td><%= h user_invoice.anno %></td>
-            <td><%= h user_invoice.tariffa %></td>
-            <td><%= h user_invoice.pagamento %></td>
-          </tr>
-      <% end %>
     </table>
-  </fieldset>
-<%	end  %>
-  <% unless @invoice.convention.nil?  %>
-      <fieldset class="box tabular">
-        <legend><%= l(:label_convention_invoices) %></legend>
+  </div>
+  <div class="icentre">
+    <% unless @invoice.user.nil? %>
         <table>
           <tr>
-            <th>num</th>
-            <th>data</th>
-            <th>anno</th>
-            <th>tariffa</th>
-            <th>pagamento</th>
+            <td>cod. utente</td>
+            <td><%= @invoice.user.id.to_s %></td>
           </tr>
-          <% @invoice.convention.invoices.each do |item| %>
+          <tr>
+            <td>Cognome e nome</td>
+            <td><%= @invoice.user.lastname unless @invoice.user.lastname.blank? %>
+              &nbsp; <%= @invoice.user.firstname unless @invoice.user.firstname.blank? %>
+            </td>
+          </tr>
+          <% unless @invoice.user.titolo.blank? || @invoice.user.titolo.nil? %>
               <tr>
-                <% if (item != @invoice) %>
-                    <td class="buttons">
-                      <%= link_to(h(item.numero_fattura), invoice_path(item, :id => item.id), :class => 'icon icon-summary') if User.current.admin? %>
-                <% else %>
-                    <td><b><%= h item.numero_fattura %></b></td>
-                <% end %>
-                </td>
-                <td><%= format_date(item.data_fattura) %></td>
-                <td><%= h item.anno %></td>
-                <td><%= h item.tariffa %></td>
-                <td><%= h item.pagamento %></td>
+                <td>qualifica</td>
+                <td><%= @invoice.user.titolo.to_s %></td>
+              </tr>
+          <% end %>
+          <% unless @invoice.user.mail.blank? || @invoice.user.mail.nil? %>
+              <tr>
+                <td>e-mail</td>
+                <td><%= @invoice.user.mail.to_s %></td>
               </tr>
           <% end %>
         </table>
-      </fieldset>
-  <%	end  %>
-</div>
-<div class='btn-footer'>
-  <%= link_to l(:button_issue_empty), edit_invoice_path(@invoice), :class => 'button-grey' %>
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  <%= link_to l(:label_download_pdf), invoice_download_pdf_path(@invoice.id ), :class => 'button-blu' %>
+    <% end %>
+
+  </div>
+  <div class="ipad">
+    <table border="2" style="border-collapse: separate;">
+      <thead>
+      <tr>
+        <th style="width: 80%">Descrizione</th>
+        <th style="width: 20%">Totale</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>
+          <%= @invoice.description %>
+          <span class="ipadtab">
+
+         <b>Abbonamento per l'anno: <%= @invoice.anno.to_s unless @invoice.anno.blank? %>&nbsp; scadenza:
+           <% unless @invoice.user.nil? %>
+               <%= I18n.localize(@invoice.user.datascadenza.to_date, :format => :giorno_mese_anno_barra) %>
+           <% end %>
+           <% unless @invoice.convention.nil? %>
+               <%= I18n.localize(@invoice.convention.data_scadenza.to_date, :format => :giorno_mese_anno_barra) %>
+           <% end %>
+         </b></span>
+        </td>
+      </tr>
+      <tr>
+        <td class="ipadtab"> tariffa ordinaria</td>
+        <td><%= "%.2f" % @tariffa.to_s %></td>
+      </tr>
+      <tr>
+        <td class="ipadtab">- sconto <%=  @scontopercent.to_s %> %</td>
+        <td><%= "%.2f" %  @sconto %></td>
+      </tr>
+      <tr>
+        <td class="ipadtab">IMPONIBILE </td>
+        <td><%= "%.2f" %  @imponibile %></td>
+      </tr>
+      <tr>
+        <td class="ipadtab">IVA  <%=  @impostapercent.to_s %> %</td>
+        <td><%= "%.2f" %  @imposta %></td>
+      </tr>
+      <tr>
+        <td class="ipadtab">TOTALE FATTURA</td>
+        <td><%= "%.2f" % @totale %></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <br/>
+
+  <div class="icentre">
+    <h4>pagamento</h4>
+
+    <p>Effettuato a mezzo: <%= @invoice.payment %></p>
+  </div>
+  <br/>
+  <hr>
+  <br/>
+  <%= Setting.default_invoices_footer %>
 </div>
