--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,16 +1,12 @@
-<h1>Editing payment</h1>
-
+<h1><%= l(:label_pagamento_metodo_plural) %></h1>
 <% form_for(@payment) do |f| %>
   <%= f.error_messages %>
-
   <p>
-    <%= f.label :pagamento %><br />
-    <%= f.text_area :pagamento %>
+      <%= f.text_field :pagamento , :size => 120 , :style => "border: solid #F5BC13 1px; padding: 1.2em!important;"%>
   </p>
   <p>
-    <%= f.submit 'Update' %>
+    <%= f.submit  l(:button_update) ,:class=> "button-blu" %>
   </p>
 <% end %>
-
-<%= link_to 'Show', @payment %> |
-<%= link_to 'Back', payments_path %>
+<br />
+<%= link_to l(:button_back), payments_path, :class => "button-grey"  %>
